# Lagrangean-Relaxation-Steiner-

./: .gitignore  README.md  TP_final.py  main.py  pyproject.toml
data/: steinb12.txt  steinb14.txt  steinb15.txt  steinb17.txt  steinb18.txt  steinb3.txt  steinb6.txt  steinb9.txt
src/: __init__.py  execution.py
src/exporting/: exporter.py
src/optimization_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/preprocessing/: __init__.py  preparation.py  structures.py
src/processing/: __init__.py  abcs.py  lagrangean.py  mc.py
