[project]
name = "optimization-project"
version = "0.1.0"
description = "A project using PuLP and Pyomo for optimization modeling"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pulp>=2.7.0",
    "pyomo>=6.6.2",
    "pandas>=2.2.2",
    "natsort>=8.4.0",        # Compatível com Python 3.12
    "networkx>=3.2.1",       # Compatível com Python 3.12
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"